--- a/index.Rmd
+++ b/index.Rmd
@@ -23,7 +23,7 @@ library(leaflet)
 library(mapview)
 library(shiny)
 library(rsconnect)
-library(gridExtra)
+library(patchwork)
 library(shinycssloaders)
 
 # data
@@ -701,11 +701,16 @@ output$evplo <- renderPlot({
     mutate(r2 = paste0('(', r2, ')')) %>% 
     unite('ind', ind, r2, sep = ' ')
   
+  # get ymax from first plot for second
+  ymax <- toplo_old %>% 
+    pull(scr) %>% 
+    max(na.rm = T)
+
   pold <- ggplot(toplo_old, aes_string(x = evvr, y = 'scr')) +
     geom_point(alpha = 0.7, size = 1.3) +
     geom_smooth(method = 'lm', se = FALSE) +
     facet_wrap( ~ ind, ncol = 4) +
-    scale_y_continuous('Index score', expand = c(0, 0)) +  
+    scale_y_continuous('Index score', expand = c(0, 0), limits = c(0, ymax)) +  
     scale_x_continuous(xlab) +
     pbase
   
@@ -720,7 +725,7 @@ output$evplo <- renderPlot({
     geom_smooth(method = 'lm', se = FALSE) +
     geom_hline(aes(yintercept = bival), linetype = 'dashed', colour = 'tomato1', size = 1) +
     facet_wrap(indnew ~ tax, ncol = 3) +
-    scale_y_continuous('ASCI score', expand = c(0, 0)) +  
+    scale_y_continuous('ASCI score', expand = c(0, 0), limits = c(0, ymax)) +  
     scale_x_continuous(xlab) +
     pbase
 
@@ -729,7 +734,8 @@ output$evplo <- renderPlot({
     pnew <- pnew + scale_x_log10(xlab) 
   }
   
-  grid.arrange(pold, pnew, ncol = 1, heights = c(0.35, 1))
+  pold + pnew +
+  plot_layout(ncol = 1, heights = c(0.2, 1))
   
 })
 plotOutput('evplo', height = '800px') %>% withSpinner()
@@ -774,8 +780,9 @@ output$olplo <- renderPlot({
     scale_y_continuous(ylab) +
     scale_x_continuous(xlab, limits = lms) +
     pbase
-
-  grid.arrange(p1, p2, ncol = 1)
+  
+  p1 + p2 +
+  plot_layout(ncol = 1)
   
 })
 plotOutput('olplo', height = '950px') %>% withSpinner()
