fix to cond units, selector text indicates ASCI ref cal only

--- a/index.Rmd
+++ b/index.Rmd
@@ -52,7 +52,7 @@ bipal <- colorFactor(
 
 # env vars to eval
 evvar <- c('Phosphorus_as_P_mgPerL', 'Nitrogen_Total_mgPerL', 'XCDENMID', 'PCT_SAFN', 'SpecificConductivity_uSPercm', 'Temperature_Deg_C', 'XSLOPE', 'LogWSA', 'Elevation') 
-names(evvar) <- c('Phosphorus (mg/L)', 'Total Nitrogen (mg/L)', '% Shading', '% Sands and Fines', 'Conductivity (mS/cm)', 'Temperature (C)', 'Mean Slope of Reach (%)', 'log-Watershed Area (m2)', 'Elevation (m)')
+names(evvar) <- c('Phosphorus (mg/L)', 'Total Nitrogen (mg/L)', '% Shading', '% Sands and Fines', 'Conductivity (uS/cm)', 'Temperature (C)', 'Mean Slope of Reach (%)', 'log-Watershed Area (m2)', 'Elevation (m)')
 
 # base theme
 pbase <- theme_minimal(base_family = 'serif', base_size = 15) +
@@ -356,7 +356,7 @@ column(12,
        ), 
        
        column(6, 
-              selectInput('refonly', 'Show only reference calibration sites?', choices = c(T, F), selected = F)
+              selectInput('refonly', 'Show only ASCI reference calibration sites?', choices = c(T, F), selected = F)
               )
        
 )
